<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/label_search"
        android:icon="@drawable/ic_search"
        android:iconTint="@android:color/white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/menu_sort"
        android:title="@string/label_sort"/>

    <item
        android:id="@+id/menu_view"
        android:title="@string/label_view"
        android:icon="@drawable/ic_columns"
        android:iconTint="@android:color/white"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>