<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="org.example.todo.viewmodel.ToDoEntryViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".view.UpdateFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCurrentTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayoutCurrentPriority"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextCurrentTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.titleData}"
                android:hint="@string/label_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCurrentDueDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/inputLayoutCurrentDescription"
            app:layout_constraintEnd_toStartOf="@+id/inputLayoutCurrentPriority"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutCurrentTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextCurrentDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.dueDateData}"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:scrollHorizontally="false"
                android:isScrollContainer="false"
                android:ellipsize="end"
                android:inputType="none|textNoSuggestions"
                android:maxLines="1"
                android:hint="@string/label_due_date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCurrentPriority"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@id/inputLayoutCurrentDueDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/inputLayoutCurrentDueDate"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutCurrentTitle">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/inputTextCurrentPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_priority"
                android:text="@={viewModel.priorityData}"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCurrentDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonUpdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutCurrentPriority">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputTextCurrentDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={viewModel.descriptionData}"
                android:gravity="top"
                android:hint="@string/label_description"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/label_update"
            android:textAllCaps="true"
            android:enabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
